<resources>
    <string name="app_name">Github App</string>
    <string name="txt_name">Name</string>
    <string name="txt_username">Username</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="txt_company">Company</string>
    <string name="txt_location">Location</string>
</resources>