<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16dp">

    <ImageView
        android:id="@+id/ivUserItem"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:contentDescription="@string/txt_imageview"
        app:layout_constraintEnd_toStartOf="@+id/tvNameUserItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameUserItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textSize="@dimen/_16sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_16dp"
        app:layout_constraintStart_toEndOf="@+id/ivUserItem"
        app:layout_constraintTop_toTopOf="@+id/ivUserItem" />

    <TextView
        android:id="@+id/tvUserNameUserItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:layout_marginStart="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivUserItem"
        app:layout_constraintStart_toEndOf="@+id/ivUserItem"
        app:layout_constraintTop_toBottomOf="@+id/tvNameUserItem" />
</androidx.constraintlayout.widget.ConstraintLayout>